1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acpng.m4 (md_FIND_PNG): Simplify usage to single argument.

	* acfind.m4 (AC_FIND_LIB): Don't require second argument, default
	to first. 
	(AC_FIND_INCLUDE): Add /usr/local/include as a checked directory.

1998-10-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acobjclibs.m4 (md_CHECK_OBJC_LIBS): Try -lobjc -lpthread -lposix4
	as a last resort.

1998-10-09  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4: Substitute swarm_{prefix, execprefix, includedir}
	rather than swarmdir.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acxpm.m4.

	* acfind.m4 (md_FIND_INCLUDES): Use symbolic expansion for _includes.
	(md_FIND_LIB): Test for both dir/lib and libdir.  

	* actcltk.m4: Use symbolic expansions for TCLINCLUDES and
	TKINCLUDES.

	* acxpm.m4: New file.

	* acguilibs.m4 (GUILIBS): Remove -lXpm from GUILIBS in non-Cygwin
	case.

1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_TCL): New macro -- split out use of tclsh to
	find prefix, content removed from md_FIND_TCL_HEADERS.
	Add tcldir, if any to front of path so the right tclsh can be run.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Don't do version search if --with-{tcl,tk}libname
	was specified.

	* acobjclibs.m4: Try -lobjc -lposix4, also.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acrpath.m4.

	* acrpath.m4: New file.

1998-08-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acobjclibs.m4: Store libraries in OBJCLIBS; don't modify LIBS.

	* acguilibs.m4 (GUILIBS): Don't prevent expansion of X_EXTRA_LIBS.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Re-evaluate directories before testing for files.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add aclinkflags.m4.

	* aclinkflags.m4: New file.
